tests/stderr-snapshots/integration__integration__count_jmps__ne_jmp_can_suggest_gt.snap
---
source: tests/integration/count_jmps.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:11:13
   │
11 │             if (--I2) goto label;
   │             ^^^^^^^^^^^^^^^^^^^^^ decrement jump of this form not supported in this game
   │
   = this language supports a different form of decrement jump; try 'if (--I2 > 0)'


